--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
+---
 sudo: false
 language: ruby
 rvm:
   - 2.4.3
 before_install: gem install bundler -v 1.16.1
+after_failure:
+  - cat log/test.log
