--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,16 @@ sudo: required
 services:
   - docker
 language: ruby
+env:
+  - DOCKER_COMPOSE_VERSION=1.21.2
 rvm:
   - 2.4.3
 before_install:
   - gem install bundler -v 1.16.1
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
   - docker-compose up -d
 after_failure:
   - cat log/test.log
