Set up coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,20 @@ cache: bundler
 services:
   - docker
 language: ruby
+env:
+  global:
+    - CC_TEST_REPORTER_ID=7ab310950456b913cd7e947f6671e3e9c16822f33bd8c572dadcc14593fe4fb5
+    - COVERAGE=true
 rvm:
   - 2.4
 before_install:
   - gem install bundler -v 1.16.1
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 after_failure:
   - cat log/test.log
 deploy:
